--- a/webapp/src/app/views/smokeview/smokeview.component.html
+++ b/webapp/src/app/views/smokeview/smokeview.component.html
@@ -28,15 +28,7 @@
     </div>
 
     <div class="right">
-        <p matRipple class="menu-l1"><mat-icon>expand_more</mat-icon>Load/Unload</p>
-        <p matRipple class="menu-l2"><mat-icon>expand_more</mat-icon>3D smoke</p>
-        <p matRipple class="menu-l3"><mat-icon>arrow_right</mat-icon>SOOT DENSITY</p>
-        <p matRipple class="menu-l3"><mat-icon>arrow_right</mat-icon>HRRPUV</p>
-        <p matRipple class="menu-l2"><mat-icon>chevron_right</mat-icon>Slice</p>
-        <p matRipple class="menu-l2"><mat-icon>chevron_right</mat-icon>Particles</p>
-        <p matRipple class="menu-l1"><mat-icon>chevron_right</mat-icon>Show/Hide</p>
-        <p matRipple class="menu-l1"><mat-icon>chevron_right</mat-icon>Options</p>
-        <p matRipple class="menu-l1"><mat-icon>chevron_right</mat-icon>Dialogs</p>
+        <menu></menu>
     </div>
 
 </div>
