--- a/webapp/src/app/views/smokeview/smokeview.component.scss
+++ b/webapp/src/app/views/smokeview/smokeview.component.scss
@@ -1,9 +1,3 @@
-@mixin menu {
-  display: flex;
-  align-items: center;
-  margin: 0;
-  cursor: pointer;
-}
 
 .top {
   display: flex;
@@ -28,26 +22,8 @@
     display: flex;
     flex-direction: column;
     width: 20%;
-
-    .menu-l1 {
-      @include menu;
-      width: calc(100% - 1rem);
-      padding-left: 1rem;
-      background-color: darkgray;
-    }
-    .menu-l2 {
-      @include menu;
-      width: calc(100% - 2rem);
-      padding-left: 2rem;
-      background-color: lightgray;
-    }
-    .menu-l3 {
-      @include menu;
-      width: calc(100% - 3rem);
-      padding-left: 3rem;
-      background-color: #eee;
-    }
   }
+
   .center {
     width: 80%;
 
@@ -56,34 +32,15 @@
       min-height: 35rem;
       text-align: center;
     }
-
-    .text-xb {
-      width: 50rem;
-      height: 10rem;
-    }
   }
+
   .right {
     display: flex;
     flex-direction: column;
     width: 20%;
-
-    .menu-l1 {
-      @include menu;
-      width: calc(100% - 1rem);
-      padding-left: 1rem;
-      background-color: darkgray;
-    }
-    .menu-l2 {
-      @include menu;
-      width: calc(100% - 2rem);
-      padding-left: 2rem;
-      background-color: lightgray;
-    }
-    .menu-l3 {
-      @include menu;
-      width: calc(100% - 3rem);
-      padding-left: 3rem;
-      background-color: #eee;
+    menu {
+      margin: 0;
+      padding: 0;
     }
   }
 }
